<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/screens_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.developers.ui.DevelopersFragment">

    <TextView
        style="@style/title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_horizontal"
        android:layout_marginStart="@dimen/margin_horizontal"
        android:gravity="center_vertical"
        android:text="@string/team" />

    <TextView
        style="@style/main_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_vertical_24"
        android:layout_marginBottom="@dimen/margin_vertical_8"
        android:text="@string/worked_on_app" />

    <TextView
        android:id="@+id/first_developer"
        style="@style/base_line_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_vertical_16"
        android:text="@string/first_developer" />

    <TextView
        android:id="@+id/second_developer"
        style="@style/base_line_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_vertical_16"
        android:text="@string/second_developer" />

    <TextView
        android:id="@+id/third_developer"
        style="@style/base_line_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_vertical_16"
        android:text="@string/third_developer" />

    <TextView
        android:id="@+id/fourth_developer"
        style="@style/base_line_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:layout_marginTop="@dimen/margin_vertical_16"
        android:text="@string/fourth_developer" />

</LinearLayout>