<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScreensBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.details.ui.DetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back_arrow" />

        <TextView
            style="@style/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_vertical_19"
            android:layout_weight="7"
            android:gravity="center_vertical"
            android:text="@string/vacancy" />

        <ImageView
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/share"
            android:src="@drawable/ic_share" />

        <ImageView
            android:id="@+id/favourite_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/favourite"
            android:src="@drawable/ic_favourite_off" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/details_block"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/margin_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/text_name_vacancy"
                style="@style/mainHeadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_title_vacancy"
                tools:text="Android-разработчик" />

            <TextView
                android:id="@+id/text_currency"
                style="@style/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:text="@string/without_salary"
                tools:text="от 100 000 ₽" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounder_background">

                <ImageView
                    android:id="@+id/employer_logo"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginVertical="@dimen/margin_vertical_16"
                    android:layout_marginStart="@dimen/margin_horizontal"
                    android:background="@drawable/rounder_background"
                    android:contentDescription="@string/logo_company"
                    tools:background="@color/black" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/margin_vertical_16"
                    android:layout_marginStart="@dimen/margin_vertical_8"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/employer_name"
                        style="@style/titleText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        tools:text="Еда" />

                    <TextView
                        android:id="@+id/employer_city"
                        style="@style/baseText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        tools:text="Москва" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                style="@style/baseLineMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/required_experience" />

            <TextView
                android:id="@+id/text_experience"
                style="@style/baseText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                tools:text="От 1 года до 3 лет" />

            <TextView
                android:id="@+id/text_employment_schedule"
                style="@style/baseText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="Полная занятость, Удаленная работа" />

            <TextView
                style="@style/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/vacancy_description" />

            <TextView
                android:id="@+id/text_description"
                style="@style/baseText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                tools:text="@string/mock_description" />

            <TextView
                style="@style/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/key_skills" />

            <TextView
                android:id="@+id/text_key_skills"
                style="@style/baseText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                tools:text="@string/mock_key_skills" />

            <TextView
                style="@style/titleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/contacts" />

            <TextView
                style="@style/baseLineMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/contact_person" />

            <TextView
                android:id="@+id/text_contact_person_name"
                style="@style/baseText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                tools:text="Ирина" />

            <TextView
                style="@style/baseLineMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/e_mail" />

            <TextView
                android:id="@+id/text_email"
                style="@style/baseText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/blue"
                tools:text="i.lozgkina@yandex.ru" />

            <TextView
                style="@style/baseLineMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/phone" />

            <TextView
                android:id="@+id/text_phone"
                style="@style/baseText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/blue"
                tools:text="+7 (904) 329-27-71" />

            <TextView
                style="@style/baseLineMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/comment" />

            <TextView
                android:id="@+id/text_message"
                style="@style/baseText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                tools:text="Заполнить анкету по форме можно на нашем сайте" />

            <Button
                android:id="@+id/similar_button"
                style="@style/button"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_marginVertical="@dimen/margin_vertical_16"
                android:text="@string/similar_vacancies" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progress_bar_details"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:indeterminateTint="@color/blue"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/details_error_block"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/details_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_description_details"
            android:src="@drawable/image_server_error_cat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/details_error"
            style="@style/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/server_error"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_image" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>