<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ScreensBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.similar.ui.SimilarFragment">

    <ImageButton
        android:id="@+id/navigation_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/navigation_back_start_margin"
        android:layout_marginTop="@dimen/navigation_back_top_margin"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/arrow_back_description"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/screen_title_text"
        style="@style/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/navigation_back_start_margin"
        android:text="@string/similar_vacancies"
        app:layout_constraintBottom_toBottomOf="@+id/navigation_back_button"
        app:layout_constraintStart_toEndOf="@id/navigation_back_button"
        app:layout_constraintTop_toTopOf="@+id/navigation_back_button" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/similar_recycler_view_top_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/screen_title_text"
        tools:itemCount="5"
        tools:listitem="@layout/vacancy_item" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/filter_item_vertical_padding"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/screen_title_text" />

    <LinearLayout
        android:id="@+id/no_internet_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/filter_item_vertical_padding"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/screen_title_text">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/no_internet_description"
            android:scaleType="centerCrop"
            android:src="@drawable/image_no_internet" />

        <TextView
            style="@style/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/no_internet" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/server_error_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/filter_item_vertical_padding"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/screen_title_text">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/server_error_description"
            android:scaleType="centerCrop"
            android:src="@drawable/image_server_error" />

        <TextView
            style="@style/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/server_error" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>